2008-12-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml: add OCINlsCharSetNameToId()
	* ext/oci8/encoding.c: add OCI8#charset_name2id and
	    OCI8#charset_id2name.
	* ext/oci8/env.c: include <util.h> only when ruby 1.8.
	* ext/oci8/oci8.h: don't include <rubyio.h> which is not used
	    anywhere.
	* ext/oci8/ocinumber.c: include <errno.h> to compile
	    ruby-oci8 for ruby 1.9.
	* lib/oci8/metadata.rb: comment duplicated typecode.
	* test/test_all.rb: use AutoRunner when it is found.
	    Ruby 1.9's test unit does't has AutoRunner.
	* test/test_oranumber.rb: explicity convert actual_val, which is
	    passed to before assert_in_delta(), to a Float to prevent
	    SEGV in OCINumberSub().

2008-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c: fix comment.
	* test/test_rowid.rb: add one assertion as ruby-oci8 1.0 branch does.

2008-09-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c: use session time zone when time zone
	    is not specified to set bind objects of timestamp with time
	    zone datatype.
	* lib/oci8/datetime.rb: add OCI8::BindType::Util.default_timezone
	    to get Time or DateTime objects from bind objects of date
	    datatype.
	* test/test_datetime.rb: fix test_datetype_duck_typing and add
	    test_timezone for the above changes.

2008-09-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml, ext/oci8/oci8.h,
	  ext/oci8/ocidatetime.c, lib/oci8.rb.in, lib/oci8/datetime.rb,
	  lib/oci8/metadata.rb, lib/oci8/oci8.rb, test/test_break.rb,
	  test/test_datetime.rb, test/test_dbi.rb, test/test_metadata.rb:
	    fix Oracle version number mistakes. rename ORAVER_9_1 to
	    ORAVER_9_0.

2008-08-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/stmt.c: disable DYNAMIC_FETCH to fetch
	    LONG or LONG RAW columns. It doesn't work well.
	* lib/oci8/metadata.rb: define char_size for Oracle 8i.
	* lib/oci8/oci8.rb: define OCI8::BindType::Long and